add graph editor and jfa